[gd_scene load_steps=15 format=3 uid="uid://cvi0bb84c7308"]

[ext_resource type="Script" path="res://src/core/scenes/game/game.gd" id="1_soc31"]
[ext_resource type="PackedScene" uid="uid://c0c5o4j30lwif" path="res://src/data/maps/arena.tscn" id="2_4vijj"]
[ext_resource type="PackedScene" uid="uid://doaykluv6j0vh" path="res://src/data/actors/hero.tscn" id="3_mn6pd"]
[ext_resource type="Script" path="res://src/core/scenes/game/ui/player_camera.gd" id="4_0bcur"]
[ext_resource type="Script" path="res://src/core/timing/turn_clock.gd" id="4_17ngi"]
[ext_resource type="PackedScene" uid="uid://ctkvdtlq3eakq" path="res://src/core/scenes/game/ui/target_display/target_display.tscn" id="4_l1y87"]
[ext_resource type="Script" path="res://src/core/scenes/game/boss_tracker.gd" id="6_gmxci"]
[ext_resource type="PackedScene" uid="uid://bmtw6f2mimcy3" path="res://src/core/scenes/game/ui/game_gui.tscn" id="6_w1kkj"]
[ext_resource type="Script" path="res://src/core/statemachine/state_machine.gd" id="8_42v0b"]
[ext_resource type="PackedScene" uid="uid://dkntd5g7ap0xd" path="res://src/core/ui/screen_fade.tscn" id="9_gd7wy"]
[ext_resource type="Script" path="res://src/core/scenes/game/states/player_movement_state.gd" id="10_2nvou"]
[ext_resource type="Script" path="res://src/core/scenes/game/states/player_target_state.gd" id="11_nrae6"]
[ext_resource type="Script" path="res://src/core/scenes/game/states/player_action_state.gd" id="12_0vv7w"]
[ext_resource type="Script" path="res://src/core/statemachine/state.gd" id="12_awymb"]

[node name="Game" type="Node"]
script = ExtResource("1_soc31")
initial_map_scene = ExtResource("2_4vijj")
player_start_marker = "player_start"
player_actor_scene = ExtResource("3_mn6pd")
game_over_scene_path = "res://src/core/scenes/gameover/game_over.tscn"

[node name="MapContainer" type="Node" parent="."]

[node name="TargetDisplay" parent="." instance=ExtResource("4_l1y87")]

[node name="PlayerCamera" type="Camera2D" parent="."]
script = ExtResource("4_0bcur")

[node name="TurnClock" type="Node" parent="."]
script = ExtResource("4_17ngi")

[node name="BossTracker" type="Node" parent="."]
script = ExtResource("6_gmxci")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("8_42v0b")
start_state = NodePath("Wait")

[node name="Wait" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_awymb")

[node name="PlayerMovementState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("action_state", "target_state")]
script = ExtResource("10_2nvou")
action_state = NodePath("../PlayerActionState")
target_state = NodePath("../PlayerTargetState")
action_combos = {
"dash": 0,
"debug_teleport": 2,
"shove": 1
}

[node name="PlayerTargetState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("action_state", "movement_state", "target_display")]
script = ExtResource("11_nrae6")
action_state = NodePath("../PlayerActionState")
movement_state = NodePath("../PlayerMovementState")
target_display = NodePath("../../TargetDisplay")

[node name="PlayerActionState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("wait_state")]
script = ExtResource("12_0vv7w")
wait_state = NodePath("../Wait")

[node name="GameGUI" parent="." instance=ExtResource("6_w1kkj")]

[node name="ScreenFade" parent="." instance=ExtResource("9_gd7wy")]

[connection signal="boss_tracked" from="BossTracker" to="." method="_on_boss_tracker_boss_tracked"]
[connection signal="boss_untracked" from="BossTracker" to="." method="_on_boss_tracker_boss_untracked"]
[connection signal="player_action_chosen" from="PlayerStateMachine/PlayerActionState" to="." method="_on_player_action_state_player_action_chosen"]
